--- a/.github/workflows/binary-zip.yml
+++ b/.github/workflows/binary-zip.yml
@@ -191,15 +191,6 @@ jobs:
   partner-chains-smart-contracts-build:
     runs-on: [self-hosted, nixos]
     steps:
-      - name: Set filename variables
-        id: set-filenames
-        run: |
-          if [ -n "${{ github.event.inputs.partner-chains-smart-contracts-tag }}" ]; then
-            echo "SIDECHAIN_MAIN_CLI=sidechain-main-cli-${{ github.event.inputs.partner-chains-smart-contracts-tag }}" >> $GITHUB_ENV
-          else
-            echo "SIDECHAIN_MAIN_CLI=sidechain-main-cli" >> $GITHUB_ENV
-          fi
-
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
@@ -221,6 +212,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: partner-chains-smart-contracts-build
     steps:
+      - name: Set filename variables
+        id: set-filenames
+        run: |
+          if [ -n "${{ github.event.inputs.partner-chains-smart-contracts-tag }}" ]; then
+            echo "SIDECHAIN_MAIN_CLI=sidechain-main-cli-${{ github.event.inputs.partner-chains-smart-contracts-tag }}" >> $GITHUB_ENV
+          else
+            echo "SIDECHAIN_MAIN_CLI=sidechain-main-cli" >> $GITHUB_ENV
+          fi
+          
       - name: Download release.zip
         uses: actions/download-artifact@v4
         with:
@@ -238,10 +238,10 @@ jobs:
           
       - name: Rename sidechain-cli to sidechain-main-cli
         run: |
-          mv artifact/unzipped/sidechain-cli artifact/unzipped/$SIDECHAIN_MAIN_CLI
+          mv artifact/unzipped/sidechain-cli artifact/unzipped/sidechain-main-cli
   
       - name: Upload Renamed Artifact
         uses: actions/upload-artifact@v4
         with:
           name: $SIDECHAIN_MAIN_CLI
-          path: artifact/unzipped/$SIDECHAIN_MAIN_CLI
+          path: artifact/unzipped/
