--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -6,23 +6,60 @@ on:
       partner_chains_sha:
         description: "partner-chains commit SHA or branch to build from"
       partner-chains-tag:
-        description: "partner-chains release tag to append to artifact name (optional)"
+        description: "partner-chains release tag to append to artifact name"
+        required: true
+      create_draft_release_page:
+        description: "Create a draft release page"
         required: false
+        default: "false"
 
 jobs:
+  check-release:
+    if: ${{ github.event.inputs.create_draft_release_page == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check if release already exists
+        id: check_release
+        run: |
+          tag="${{ github.event.inputs.partner-chains-tag }}"
+          release_response=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                              "https://api.github.com/repos/${{ github.repository }}/releases/tags/$tag")
+          if echo "$release_response" | grep -q '"message": "Not Found"'; then
+            echo "release_exists=false" >> $GITHUB_ENV
+          else
+            echo "release_exists=true" >> $GITHUB_ENV
+          fi
+
+  create-release:
+    if: ${{ github.event.inputs.create_draft_release_page == 'true' && env.release_exists == 'false' }}
+    needs: check-release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create draft release
+        id: create_release
+        run: |
+          tag="${{ github.event.inputs.partner-chains-tag }}"
+          release_response=$(curl -s -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                              -d @- "https://api.github.com/repos/${{ github.repository }}/releases" <<-EOF
+                              {
+                                "tag_name": "$tag",
+                                "name": "$tag",
+                                "body": "Draft release for $tag",
+                                "draft": true
+                              }
+                              EOF
+                            )
+          echo "release_id=$(echo $release_response | jq -r .id)" >> $GITHUB_ENV
+
   partner-chains-linux:
     runs-on: ubuntu-latest
+    needs: create-release
     steps:
       - name: Set filename variables
         id: set-filenames
         run: |
-          if [ -n "${{ github.event.inputs.partner-chains-tag }}" ]; then
-            echo "PARTNER_CHAINS_CLI_X86_64_LINUX=partner-chains-cli-${{ github.event.inputs.partner-chains-tag }}-x86_64-linux" >> $GITHUB_ENV
-            echo "PARTNER_CHAINS_NODE_X86_64_LINUX=partner-chains-node-${{ github.event.inputs.partner-chains-tag }}-x86_64-linux" >> $GITHUB_ENV
-          else
-            echo "PARTNER_CHAINS_CLI_X86_64_LINUX=partner-chains-cli-x86_64-linux" >> $GITHUB_ENV
-            echo "PARTNER_CHAINS_NODE_X86_64_LINUX=partner-chains-node-x86_64-linux" >> $GITHUB_ENV
-          fi
+          echo "PARTNER_CHAINS_CLI_X86_64_LINUX=partner-chains-cli-${{ github.event.inputs.partner-chains-tag }}-x86_64-linux" >> $GITHUB_ENV
+          echo "PARTNER_CHAINS_NODE_X86_64_LINUX=partner-chains-node-${{ github.event.inputs.partner-chains-tag }}-x86_64-linux" >> $GITHUB_ENV
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -58,19 +95,26 @@ jobs:
           name: ${{ env.PARTNER_CHAINS_NODE_X86_64_LINUX }}
           path: ${{ env.PARTNER_CHAINS_NODE_X86_64_LINUX }}
 
+      - name: Upload artifact to release
+        if: ${{ github.event.inputs.create_draft_release_page == 'true' && env.release_id != '' }}
+        run: |
+          for artifact in ${{ env.PARTNER_CHAINS_CLI_X86_64_LINUX }} ${{ env.PARTNER_CHAINS_NODE_X86_64_LINUX }}; do
+            curl -s -X POST \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Content-Type: application/octet-stream" \
+              --data-binary @"$artifact" \
+              "https://uploads.github.com/repos/${{ github.repository }}/releases/${{ env.release_id }}/assets?name=$(basename $artifact)"
+          done
+
   partner-chains-macos-x86_64:
     runs-on: macos-latest
+    needs: create-release
     steps:
       - name: Set filename variables
         id: set-filenames
         run: |
-          if [ -n "${{ github.event.inputs.partner-chains-tag }}" ]; then
-            echo "PARTNER_CHAINS_CLI_X86_64_APPLE_DARWIN=partner-chains-cli-${{ github.event.inputs.partner-chains-tag }}-x86_64-apple-darwin" >> $GITHUB_ENV
-            echo "PARTNER_CHAINS_NODE_X86_64_APPLE_DARWIN=partner-chains-node-${{ github.event.inputs.partner-chains-tag }}-x86_64-apple-darwin" >> $GITHUB_ENV
-          else
-            echo "PARTNER_CHAINS_CLI_X86_64_APPLE_DARWIN=partner-chains-cli-x86_64-apple-darwin" >> $GITHUB_ENV
-            echo "PARTNER_CHAINS_NODE_X86_64_APPLE_DARWIN=partner-chains-node-x86_64-apple-darwin" >> $GITHUB_ENV
-          fi
+          echo "PARTNER_CHAINS_CLI_X86_64_APPLE_DARWIN=partner-chains-cli-${{ github.event.inputs.partner-chains-tag }}-x86_64-apple-darwin" >> $GITHUB_ENV
+          echo "PARTNER_CHAINS_NODE_X86_64_APPLE_DARWIN=partner-chains-node-${{ github.event.inputs.partner-chains-tag }}-x86_64-apple-darwin" >> $GITHUB_ENV
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -109,19 +153,26 @@ jobs:
           name: ${{ env.PARTNER_CHAINS_NODE_X86_64_APPLE_DARWIN }}
           path: ${{ env.PARTNER_CHAINS_NODE_X86_64_APPLE_DARWIN }}
 
+      - name: Upload artifact to release
+        if: ${{ github.event.inputs.create_draft_release_page == 'true' && env.release_id != '' }}
+        run: |
+          for artifact in ${{ env.PARTNER_CHAINS_CLI_X86_64_APPLE_DARWIN }} ${{ env.PARTNER_CHAINS_NODE_X86_64_APPLE_DARWIN }}; do
+            curl -s -X POST \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Content-Type: application/octet-stream" \
+              --data-binary @"$artifact" \
+              "https://uploads.github.com/repos/${{ github.repository }}/releases/${{ env.release_id }}/assets?name=$(basename $artifact)"
+          done
+
   partner-chains-macos-arm64:
     runs-on: macos-latest
+    needs: create-release
     steps:
       - name: Set filename variables
         id: set-filenames
         run: |
-          if [ -n "${{ github.event.inputs.partner-chains-tag }}" ]; then
-            echo "PARTNER_CHAINS_CLI_AARCH64_APPLE_DARWIN=partner-chains-cli-${{ github.event.inputs.partner-chains-tag }}-aarch64-apple-darwin" >> $GITHUB_ENV
-            echo "PARTNER_CHAINS_NODE_AARCH64_APPLE_DARWIN=partner-chains-node-${{ github.event.inputs.partner-chains-tag }}-aarch64-apple-darwin" >> $GITHUB_ENV
-          else
-            echo "PARTNER_CHAINS_CLI_AARCH64_APPLE_DARWIN=partner-chains-cli-aarch64-apple-darwin" >> $GITHUB_ENV
-            echo "PARTNER_CHAINS_NODE_AARCH64_APPLE_DARWIN=partner-chains-node-aarch64-apple-darwin" >> $GITHUB_ENV
-          fi
+          echo "PARTNER_CHAINS_CLI_AARCH64_APPLE_DARWIN=partner-chains-cli-${{ github.event.inputs.partner-chains-tag }}-aarch64-apple-darwin" >> $GITHUB_ENV
+          echo "PARTNER_CHAINS_NODE_AARCH64_APPLE_DARWIN=partner-chains-node-${{ github.event.inputs.partner-chains-tag }}-aarch64-apple-darwin" >> $GITHUB_ENV
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -153,9 +204,20 @@ jobs:
         with:
           name: ${{ env.PARTNER_CHAINS_CLI_AARCH64_APPLE_DARWIN }}
           path: ${{ env.PARTNER_CHAINS_CLI_AARCH64_APPLE_DARWIN }}
-            
+
       - name: Upload partner-chains-node-aarch64-apple-darwin
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.PARTNER_CHAINS_NODE_AARCH64_APPLE_DARWIN }}
           path: ${{ env.PARTNER_CHAINS_NODE_AARCH64_APPLE_DARWIN }}
+
+      - name: Upload artifact to release
+        if: ${{ github.event.inputs.create_draft_release_page == 'true' && env.release_id != '' }}
+        run: |
+          for artifact in ${{ env.PARTNER_CHAINS_CLI_AARCH64_APPLE_DARWIN }} ${{ env.PARTNER_CHAINS_NODE_AARCH64_APPLE_DARWIN }}; do
+            curl -s -X POST \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Content-Type: application/octet-stream" \
+              --data-binary @"$artifact" \
+              "https://uploads.github.com/repos/${{ github.repository }}/releases/${{ env.release_id }}/assets?name=$(basename $artifact)"
+          done
