--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -44,15 +44,8 @@ jobs:
         run: |
           tag="${{ github.event.inputs.partner-chains-tag }}"
           release_response=$(curl -s -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                              -d @- "https://api.github.com/repos/${{ github.repository }}/releases" <<-EOF
-                              {
-                                "tag_name": "$tag",
-                                "name": "$tag",
-                                "body": "Draft release for $tag",
-                                "draft": true
-                              }
-                              EOF
-                            )
+                              -d '{"tag_name": "'$tag'", "name": "'$tag'", "body": "Draft release for '$tag'", "draft": true}' \
+                              "https://api.github.com/repos/${{ github.repository }}/releases")
           echo "release_id=$(echo $release_response | jq -r .id)" >> $GITHUB_ENV
           echo "::set-output name=release_id::$(echo $release_response | jq -r .id)"
 
