--- a/pallets/session-validator-management/Cargo.toml
+++ b/pallets/session-validator-management/Cargo.toml
@@ -20,6 +20,7 @@ sp-runtime = { workspace = true }
 sp-core = { workspace = true }
 sp-session-validator-management = { workspace = true }
 sp-io = { workspace = true, optional = true }
+sidechain-domain = { workspace = true }
 
 [dev-dependencies]
 sp-io = { workspace = true }
